[package]
name = "hi-res-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.2"
axum = "0.8.9"
humantime = "2.4.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "signal", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
